# lightning_ai

./: .gitignore  BACKLOG.md  PROGRESS.md  README.md  pyproject.toml
configs/: base.yaml  phase1_baselines.yaml  phase1_rhyme_baselines.yaml  phase2_ensemble.yaml  phase4_lens.yaml
data/: categories.json  rhymes.json
docs/: architecture.md  parameter_study.md
scripts/: check.ps1  setup.ps1
src/lightning_decoding/: __init__.py  analysis.py  calibrate.py  cli.py  config.py  decoders.py  lens.py  metrics.py  model_io.py  noise.py  plotting.py  report.py  runner.py  tasks.py  token_spaces.py
tests/: test_analysis.py  test_calibrate.py  test_decoders.py  test_lens.py  test_metrics.py  test_noise.py  test_report.py  test_tasks.py
